--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=postgresql
+DB_CONNECTION=pgsql
 DB_HOST=ec2-34-230-149-169.compute-1.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=de57lo8fth38n1
