--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
-<IfModule mod_rewrite.c>
+Options +FollowSymLinks
 RewriteEngine On
-RewriteRule ^(.*)$ public/$1 [L]
-</IfModule>
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.php [L]
